--- a/index.html
+++ b/index.html
@@ -4,38 +4,47 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Los Santos Penal Codes</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <style>
-    table {
+    .penal-code-table {
       border-collapse: collapse;
       width: 100%;
     }
-    th, td {
+    .penal-code-table th, .penal-code-table td {
       border: 1px solid black;
       padding: 8px;
       text-align: left;
     }
-    th {
+    .penal-code-table th {
       background-color: #f2f2f2;
+    }
+    td{
+        text-align: center;
     }
   </style>
 </head>
-<body>
-  <h1>Los Santos Penal Codes</h1>
-    <input type="text" id="search-input" placeholder="Search by Penal ID or Crime Descriptions">
+<body class="m-3">
+  <div class="container">
+    <h1 class="my-5">Los Santos Penal Codes</h1>
+    <div class="input-group mb-3">
+      <input type="text" class="form-control" id="search-input" placeholder="Search ID or Crime Desc">
+      <button class="btn btn-primary" type="button" id="search-btn">Search</button>
+    </div>
     <div id="results-div"></div>
     <div id="cart"></div>
-    <table id="penal-codes-table">
-    <thead>
-      <tr>
-        <th>Penal ID</th>
-        <th>Crime Descriptions</th>
-        <th>Time</th>
-        <th>Fines</th>
-        <th>Add</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+    <table class="penal-code-table" id="penal-codes-table">
+      <thead>
+        <tr>
+          <th>Penal ID</th>
+          <th>Crime Descriptions</th>
+          <th>Time</th>
+          <th>Fines</th>
+          <th>Add</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
