Add UI using Bootstrap

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body class="m-3">
   <div class="container">
-    <h1 class="my-5">Los Santos Penal Codes</h1>\
+    <h1 class="my-5">Los Santos Penal Codes</h1>
     <span class="text-warning">kalau calculatornya ga muncul, tambahin kata apa aja di search bar</span>
     <div class="input-group mb-3">
       <input type="text" class="form-control" id="search-input" placeholder="Search ID or Crime Desc">
